# swagger-output.json
@@ -2484,6 +2484,108 @@
         }
       }
     },
+    "/api/reportes/v1/creaevento": {
+      "post": {
+        "tags": [
+          "SAE - Backoffice - Reportes"
+        ],
+        "description": "Crea una evento nuevo",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Datos para crear un evento",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "numero_ot": {
+                  "type": "string",
+                  "example": "123456"
+                },
+                "tipo_evento": {
+                  "type": "string",
+                  "example": "DOMIC"
+                },
+                "rut_maestro": {
+                  "type": "string",
+                  "example": "12345678-9"
+                },
+                "rut_ayudante": {
+                  "type": "string",
+                  "example": "12345678-9"
+                },
+                "direccion": {
+                  "type": "string",
+                  "example": "calle uno 123"
+                },
+                "fecha_hora": {
+                  "type": "string",
+                  "example": "2023-01-01 12:00:00"
+                },
+                "coordenadas": {
+                  "type": "string",
+                  "example": "{34.23, -56.34}"
+                },
+                "hora_inicio": {
+                  "type": "string",
+                  "example": "12:00"
+                },
+                "hora_termino": {
+                  "type": "string",
+                  "example": "13:00"
+                },
+                "brigada": {
+                  "type": "number",
+                  "example": 1
+                },
+                "comuna": {
+                  "type": "string",
+                  "example": "76345"
+                },
+                "despachador": {
+                  "type": "string",
+                  "example": "Miguel Soto"
+                },
+                "tipo_turno": {
+                  "type": "number",
+                  "example": 2
+                },
+                "patente": {
+                  "type": "string",
+                  "example": "AAA11"
+                },
+                "trabajo_solicitado": {
+                  "type": "string",
+                  "example": " Trabajo solicitado"
+                },
+                "trabajo_realizado": {
+                  "type": "string",
+                  "example": " Trabajo realizado"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/api/reportes/v1/updateevento/{id}": {
       "put": {
         "tags": [
@@ -2511,6 +2613,36 @@
                 }
               }
             }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/reportes/v1/deleteevento/{id}": {
+      "delete": {
+        "tags": [
+          "SAE - Backoffice - Reportes"
+        ],
+        "description": "Elimina un evento pr id de jornada",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {
